--- a/.hintrc
+++ b/.hintrc
@@ -3,11 +3,9 @@
     "development"
   ],
   "hints": {
-    "axe/name-role-value": [
-      "default",
-      {
-        "link-name": "off"
-      }
-    ]
+    "axe/name-role-value": "off",
+    "disown-opener": "off",
+    "compat-api/html": "off",
+    "no-inline-styles": "off"
   }
 }
