--- a/.hintrc
+++ b/.hintrc
@@ -6,6 +6,7 @@
     "axe/name-role-value": "off",
     "disown-opener": "off",
     "compat-api/html": "off",
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "button-type": "off"
   }
 }
