--- a/.hintrc
+++ b/.hintrc
@@ -7,6 +7,8 @@
     "disown-opener": "off",
     "compat-api/html": "off",
     "no-inline-styles": "off",
-    "button-type": "off"
+    "button-type": "off",
+    "axe/forms": "off",
+    "axe/text-alternatives": "off"
   }
 }
